acomodé las clases en postre.html

--- a/pages/postres.html
+++ b/pages/postres.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-       <!-- Inicio del menú -->
+    <!-- Inicio del menú -->
     <header>
         <!-- Inicio de la navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -35,12 +35,10 @@
                             <a href="../index.html" class="li-link nav-link active">Inicio</a>
                         </li>
                         <li class="li-nav nav-item">
-                            <a href="#" class="li-link nav-link active"
-                                aria-current="page">Dulce </a>
+                            <a href="#" class="li-link nav-link active" aria-current="page">Dulce </a>
                         </li>
                         <li class="li-nav nav-item">
-                            <a href="#" class="li-link nav-link active"
-                                aria-current="page">Salado</a>
+                            <a href="#" class="li-link nav-link active" aria-current="page">Salado</a>
                         </li>
                         <li class="li-nav nav-item">
                             <a href="./quienes-somos.html" class="li-link nav-link active"
@@ -66,15 +64,19 @@
     <!-- Fin del menú -->
 
     <main>
-        <h1>
-            Sección de postres
-        </h1>
-        <h2>
-            Las 6 recetas más recomendadas
-        </h2>
-        <h3>
-            Postres del mundo
-        </h3>
+
+        <div>
+            <h1>
+                Sección de postres
+            </h1>
+            <h2>
+                Las 6 recetas más recomendadas
+            </h2>
+            <h3>
+                Postres del mundo
+            </h3>
+        </div>
+
 
         <section class="card-container-pastry">
 
