agregue diferentes clases al html postres

--- a/pages/postres.html
+++ b/pages/postres.html
@@ -65,31 +65,31 @@
 
     <main>
 
-        <div>
-            <h1>
+        <div class="pastry-inicio">
+            <h1 class="patry-inicio__title">
                 Sección de postres
             </h1>
-            <h2>
+            <h2 class="pastry-inicio__subtitle">
                 Las 6 recetas más recomendadas
             </h2>
-            <h3>
+            <h3 class="pastry-inicio__subheading">
                 Postres del mundo
             </h3>
         </div>
 
 
-        <section class="card-container-pastry">
+        <section class="container-card-pastry">
 
             <article class="card-pastry">
-                <img src="../assetsProyecto/melopita.png" alt="postre melopita" class="imagenpostres">
-                <div>
-                    <h3>
+                <img src="../assetsProyecto/melopita.png" alt="postre melopita" class="card-pastry__image">
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Melopita
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         Un dulce griego con alma casera
                     </h4>
-                    <p>
+                    <p class="card-pastry__description">
                         La melopita es un postre tradicional de la isla griega de Sifnos, simple pero lleno de sabor. Su
                         nombre significa “pastel de miel”, y eso ya anticipa su esencia: una base suave de ricota o
                         queso
@@ -103,16 +103,16 @@
             </article>
 
             <article class="card-pastry">
-                <img src="../assetsProyecto/Makroud.png" alt="Postre makroud" class="imagenpostres">
-                <div>
-                    <h3>
+                <img src="../assetsProyecto/Makroud.png" alt="Postre makroud" class="card-pastry__image">
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Makroud
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         Tradición dulce del Magreb
                     </h4>
 
-                    <p>
+                    <p class="card-pastry__description">
                         El Makroud (o Makrout) es un postre emblemático del norte de África, especialmente popular en
                         países
                         como Túnez, Argelia y Marruecos. Se trata de un pastelito de sémola relleno con pasta de
@@ -125,16 +125,16 @@
             </article>
 
             <article class="card-pastry">
-                <img src="../assetsProyecto/kunefe.png" alt="Postre künefe" class="imagenpostres">
-                <div>
-                    <h3>
+                <img src="../assetsProyecto/kunefe.png" alt="Postre künefe" class="card-pastry__image">
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Künefe
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         Un crujiente tesoro de Medio Oriente
                     </h4>
 
-                    <p>
+                    <p class="card-pastry__description">
                         El Künefe es un postre tradicional del Levante, muy popular en Turquía, Líbano y otros países de
                         Medio Oriente. Su magia está en el contraste perfecto entre lo crujiente y lo cremoso: se
                         elabora
@@ -145,16 +145,16 @@
             </article>
 
             <article class="card-pastry">
-                <img src="../assetsProyecto/dondurma.png" alt="Postre Dondurma" class="imagenpostres">
-                <div>
-                    <h3>
+                <img src="../assetsProyecto/dondurma.png" alt="Postre Dondurma" class="card-pastry__image">
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Dondurma
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         El helado que desafía las reglas
                     </h4>
 
-                    <p>
+                    <p class="card-pastry__description">
                         El Dondurma es el tradicional helado turco, famoso no solo por su sabor, sino también por su
                         textura
                         elástica y resistente al derretimiento. A diferencia del helado convencional, se elabora con
@@ -168,15 +168,15 @@
 
             <article class="card-pastry">
                 <img src="../assetsProyecto/tebleque.png" alt="Postre Tebleque" class="imagenpostres">
-                <div>
-                    <h3>
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Tebleque
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         Suavidad tropical en cada cucharada
                     </h4>
 
-                    <p>
+                    <p class="card-pastry__description">
                         El Tembleque es un postre típico de Puerto Rico, cremoso y delicadamente perfumado con leche de
                         coco. Su nombre proviene de su textura temblorosa y suave, parecida a un flan, que se logra al
                         cocinar leche de coco con azúcar, almidón de maíz y un toque de canela.
@@ -185,16 +185,16 @@
             </article>
 
             <article class="card-pastry">
-                <img src="../assetsProyecto/heladoDeCrema.png" alt="Postre Helado de Crema" class="imagenpostres">
-                <div>
-                    <h3>
+                <img src="../assetsProyecto/heladoDeCrema.png" alt="Postre Helado de Crema" class="card-pastry__image">
+                <div class="card-pastry__content">
+                    <h3 class="card-pastry__title">
                         Helado de Crema
                     </h3>
-                    <h4>
+                    <h4 class="card-pastry__subtitle">
                         El clásico que nunca falla
                     </h4>
 
-                    <p>
+                    <p class="card-pastry__description">
                         El helado de crema es la base de muchos sabores, pero por sí solo ya es un verdadero deleite. Su
                         textura es suave, sedosa y cremosa, con un sabor delicado y ligeramente dulce que resalta la
                         calidad
@@ -203,7 +203,7 @@
                 </div>
             </article>
 
-            <div>
+            <div class="card-pastry__button">
                 <button type="button" class="boton-vermas">Más recetas</button>
             </div>
         </section>
