modifiqué las clases y acomodé el html de recetas

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -36,12 +36,10 @@
                             <a href="../index.html" class="li-link nav-link active">Inicio</a>
                         </li>
                         <li class="li-nav nav-item">
-                            <a href="./postres.html" class="li-link nav-link active"
-                                aria-current="page">Dulce </a>
+                            <a href="./postres.html" class="li-link nav-link active" aria-current="page">Dulce </a>
                         </li>
                         <li class="li-nav nav-item">
-                            <a href="./postres.html" class="li-link nav-link active"
-                                aria-current="page">Salado</a>
+                            <a href="./postres.html" class="li-link nav-link active" aria-current="page">Salado</a>
                         </li>
                         <li class="li-nav nav-item">
                             <a href="./quienes-somos.html" class="li-link nav-link active"
@@ -67,100 +65,68 @@
 
     <!-- Fin del menú -->
 
-    <main>
-        <h1>
-            Melopita
-        </h1>
-        <section>
-            <article>
+    <!-- Inicio del main -->
+    
+    <main class="recipe-page">
+        <h1 class="recipe-page__title">Melopita</h1>
 
-                <h3>
-                    Un dulce griego con alma casera
-                </h3>
-                <p>
+        <section class="recipe-detail">
+            <article class="recipe-detail__intro">
+                <h3 class="recipe-detail__subtitle">Un dulce griego con alma casera</h3>
+                <p class="recipe-detail__description">
                     La melopita es un postre tradicional de la isla griega de Sifnos, simple pero lleno de sabor. Su
                     nombre significa “pastel de miel”, y eso ya anticipa su esencia: una base suave de ricota o queso
                     fresco, endulzada con miel natural y aromatizada con un toque de canela o vainilla. Se hornea hasta
                     lograr una textura cremosa, similar a una tarta de queso, y se sirve tanto fría como a temperatura
                     ambiente.
                 </p>
-                <div>
-                    <img src="../assetsProyecto/melopita.png" alt="Postre melopita" class="imagenrecetas">
+                <div class="recipe-detail__image-wrapper">
+                    <img src="../assetsProyecto/melopita.png" alt="Postre melopita" class="recipe-detail__image">
                 </div>
+            </article>
 
-                <h2>
-                    ingredientes
-                </h2>
-                <ul>
-                    <li>
+            <article class="recipe-detail__ingredients">
+                <h2 class="recipe-detail__heading">Ingredientes</h2>
+                <ul class="ingredient-list">
+                    <li class="ingredient-list__item">
                         Para la base y el crumble (opcional, pero le da un toque extra):
-                        <ul>
-                            <li>
-                                200g de harina de trigo
-                            </li>
-                            <li>
-                                100g de mantequilla fría cortada en cubos
-                            </li>
-                            <li>
-                                50g de azúcar (1/4 taza)
-                            </li>
-                            <li>
-                                1 pizca de sal
-                            </li>
-                            <li>
-                                1-2 cucharadas de agua helada (si es necesario)
-                            </li>
+                        <ul class="ingredient-list__sublist">
+                            <li class="ingredient-list__subitem">200g de harina de trigo</li>
+                            <li class="ingredient-list__subitem">100g de mantequilla fría cortada en cubos</li>
+                            <li class="ingredient-list__subitem">50g de azúcar (1/4 taza)</li>
+                            <li class="ingredient-list__subitem">1 pizca de sal</li>
+                            <li class="ingredient-list__subitem">1-2 cucharadas de agua helada (si es necesario)</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="ingredient-list__item">
                         Para el relleno de manzana:
-                        <ul>
-                            <li>
-                                4-5 manzanas medianas
-                            </li>
-                            <li>
-                                Jugo de 1/2 limón
-                            </li>
-                            <li>
-                                50g de azúcar (1/4 taza), ajusta al gusto según la dulzura de las manzanas
-                            </li>
-                            <li>
-                                1 cucharadita de canela en polvo
-                            </li>
-                            <li>
-                                1/4 cucharadita de nuez moscada rallada (opcional)
-                            </li>
-                            <li>
-                                1/4 taza de pasas (opcional, hidratadas en ron o agua si quieres)
-                            </li>
-                            <li>
-                                2 cucharadas de maicena (fécula de maíz)
-                            </li>
+                        <ul class="ingredient-list__sublist">
+                            <li class="ingredient-list__subitem">4-5 manzanas medianas</li>
+                            <li class="ingredient-list__subitem">Jugo de 1/2 limón</li>
+                            <li class="ingredient-list__subitem">50g de azúcar (1/4 taza), ajusta al gusto según la
+                                dulzura de las manzanas</li>
+                            <li class="ingredient-list__subitem">1 cucharadita de canela en polvo</li>
+                            <li class="ingredient-list__subitem">1/4 cucharadita de nuez moscada rallada (opcional)</li>
+                            <li class="ingredient-list__subitem">1/4 taza de pasas (opcional, hidratadas en ron o agua
+                                si quieres)</li>
+                            <li class="ingredient-list__subitem">2 cucharadas de maicena (fécula de maíz)</li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="ingredient-list__item">
                         Para el almíbar de miel:
-                        <ul>
-                            <li>
-                                1/2 taza de miel (de buena calidad, si es posible)
-                            </li>
-                            <li>
-                                1/4 taza de agua
-                            </li>
-                            <li>
-                                1 rama de canela (opcional)
-                            </li>
-                            <li>
-                                Cáscara de 1/2 limón (sin la parte blanca)
-                            </li>
+                        <ul class="ingredient-list__sublist">
+                            <li class="ingredient-list__subitem">1/2 taza de miel (de buena calidad, si es posible)</li>
+                            <li class="ingredient-list__subitem">1/4 taza de agua</li>
+                            <li class="ingredient-list__subitem">1 rama de canela (opcional)</li>
+                            <li class="ingredient-list__subitem">Cáscara de 1/2 limón (sin la parte blanca)</li>
                         </ul>
                     </li>
                 </ul>
+            </article>
 
-                <h2>
-                    Instrucciones
-                </h2>
-                <p>
+            <article class="recipe-detail__instructions">
+                <h2 class="recipe-detail__heading">Instrucciones</h2>
+                <p class="recipe-detail__text">
                     Masa: Mezcla harina, azúcar, sal y mantequilla hasta formar migas. Reserva 1/2 taza para el crumble.
                     Al resto, añade agua si es necesario para formar una masa. Refrigera ambas 30 min.
                     Relleno: Pela, descorazona y corta las manzanas. Mezcla con jugo de limón, azúcar, canela, nuez
@@ -176,17 +142,19 @@
             </article>
         </section>
 
-        <h3>
-            Comentarios
-        </h3>
-        <div>
-            <form action="introducir un texto de comentario">
-                <label for="mensaje"></label>
-                <textarea name="mensaje" id="mensaje"></textarea>
+        <section class="comments-section">
+            <h3 class="comments-section__heading">Comentarios</h3>
+            <form action="#" class="comment-form">
+                <label for="mensaje" class="comment-form__label screen-reader-only">Introduce un comentario</label>
+                <textarea name="mensaje" id="mensaje" class="comment-form__textarea"
+                    placeholder="Escribe tu comentario aquí..."></textarea>
+                <button type="submit" class="button button--primary comment-form__submit-button">Enviar
+                    comentario</button>
             </form>
-        </div>
-
+        </section>
     </main>
+
+    <!-- Footer -->
     <footer class="footer-block">
         <div class="newsletter-footer">
             <form action="/suscrib" method="get" class="newsletter-form">
