más modificaciones para el html recetas, agregué un comentario

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -66,6 +66,9 @@
     <!-- Fin del menú -->
 
     <!-- Inicio del main -->
+
+
+    <!-- PAGINA SIN ESTILOS -->
     
     <main class="recipe-page">
         <h1 class="recipe-page__title">Melopita</h1>
