--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- aos -->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -34,7 +37,8 @@
                             <a href="#" class="main-nav__link nav-link active">Inicio</a>
                         </li>
                         <li class="main-nav__item nav-item">
-                            <a href="./pages/postres.html" class="main-nav__link nav-link active" aria-current="page">Dulce
+                            <a href="./pages/postres.html" class="main-nav__link nav-link active"
+                                aria-current="page">Dulce
                             </a>
                         </li>
                         <li class="main-nav__item nav-item">
@@ -51,8 +55,8 @@
                     </ul>
                     <!-- Búsqueda -->
                     <form class="d-flex contenedor-nav-search main-nav__search-form" role="search">
-                        <input class="form-control me-2 d-flex  main-nav__search-input" type="search" placeholder="Search"
-                            aria-label="Search" />
+                        <input class="form-control me-2 d-flex  main-nav__search-input" type="search"
+                            placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success button--vermas" type="submit">Buscar</button>
                     </form>
                 </div>
@@ -65,8 +69,8 @@
         <nav class="navbar navbar-light bg-light justify-content-center d-flex secondarynav--image">
             <a class="navbar-brand secondarynav--texto">¿Qué querés comer hoy?</a>
             <form class="d-flex" role="search">
-                <input class="form-control me-2 d-flex nav-search" type="search" placeholder="Search"
-                    aria-label="Search" />
+                <input class="form-control me-2 d-flex nav-search main-nav__search-input" type="search"
+                    placeholder="Search" aria-label="Search" />
             </form>
         </nav>
 
@@ -77,7 +81,8 @@
 
     <main>
         <div class="presentacion">
-            <div class="presentacion--title">
+            <div class="presentacion--title" data-aos="fade-right"data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
                 <h1>
                     La cocina de Guille
                 </h1>
@@ -88,7 +93,8 @@
                     <a href="/pages/quienes-somos.html" class="button button--quienessomos">Quiénes somos</a>
                 </div>
             </div>
-            <div class="presentacion--image-container">
+            <div class="presentacion--image-container" data-aos="fade-left" data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
                 <img src="./assetsProyecto/amasado.png" alt="amasado de masa" class="presentacion--image">
             </div>
         </div>
@@ -233,52 +239,44 @@
 
     </main>
 
-    <footer class="footer-block">
-        <div class="newsletter-footer">
-            <form action="/suscrib" method="get" class="newsletter-form">
-                <h5 class="newsletter-form__title">Suscribite a nuestro newsletter</h5>
-                <label for="email" class="newsletter-form__label">Correo electrónico</label>
-                <input type="email" name="email" id="email" class="newsletter-form__input"
-                    placeholder="Tu correo electrónico">
-                <button type="submit" class="newsletter-form__button button--vermas">Suscribirme</button>
-            </form>
-        </div>
-        <div class="logo--description">
-            <h5>También puedes seguirnos en nuestras redes</h5>
-        </div>
-        <div class="logo-block">
+    <footer>
 
-            <div>
-                <ul class="logo--footer">
-                    <li>
-                        <img src="./assetsProyecto/instagram.png" alt="logo de Instagram"
-                            class="logo--footer__red-social">
-                        <a href="#" class="li-link">Instagram</a>
-                    </li>
-                    <li>
-                        <img src="./assetsProyecto/facebook.png" alt="logo de facebook"
-                            class="logo--footer__red-social">
-
-                        <a href="#" class="li-link">Facebook</a>
-                    </li>
-                    <li>
-                        <img src="./assetsProyecto/whatsapp.png" alt="Logo de whatsapp"
-                            class="logo--footer__red-social">
-                        <a href="#" class="li-link">Whatsapp</a>
-                    </li>
-                    <li>
-                        <img src="./assetsProyecto/gorjeo (1).png" alt="Logo de X" class="logo--footer__red-social">
-                        <a href="#" class="li-link">X</a>
-                    </li>
-                </ul>
-            </div>
+        <div>
+            <h5>Nuestras redes</h5>
         </div>
+
+        <div>
+            <ul class="logo--footer">
+                <li>
+                    <img src="./assetsProyecto/instagram.png" alt="logo de Instagram" class="logo--footer__red-social">
+                    <a href="#" class="li-link">Instagram</a>
+                </li>
+                <li>
+                    <img src="./assetsProyecto/facebook.png" alt="logo de facebook" class="logo--footer__red-social">
+
+                    <a href="#" class="li-link">Facebook</a>
+                </li>
+                <li>
+                    <img src="./assetsProyecto/whatsapp.png" alt="Logo de whatsapp" class="logo--footer__red-social">
+                    <a href="#" class="li-link">Whatsapp</a>
+                </li>
+                <li>
+                    <img src="./assetsProyecto/gorjeo (1).png" alt="Logo de X" class="logo--footer__red-social">
+                    <a href="#" class="li-link">X</a>
+                </li>
+            </ul>
+        </div>
+
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous">
         </script>
-
+<!-- aos -->
+ <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 
 </html>
